--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -32,7 +32,7 @@ jobs:
           path: |
             dist
             package.json
-  deploy:s
+  deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
